# tdslite

./: .gitignore  CMakeLists.txt  LICENSE  check-frame_error.cpp  check-frame_login7.cpp  check-frame_response.cpp  check-frame_response_introw.cpp  check-frame_response_nbcrow.cpp  debug.c  frame_response.cpp  frame_response.h  frame_token_row.cpp  frame_token_row.h  main.cpp  net.c  net.h  tds_connection.cpp  tds_connection.h  tds_frames.cpp  tds_frames.h
cli/: CMakeLists.txt  main.cpp
libtdslite/: CMakeLists.txt
libtdslite/include/tdslite/: debug.h  frame_response.h  frame_token_row.h  tds_connection.h  tds_frames.h
libtdslite/src/: debug.c  frame_response.cpp  frame_token_row.cpp  net.c  tds_connection.cpp  tds_frames.cpp
libtdslite/tests/: check-frame_error.cpp  check-frame_login7.cpp  check-frame_response.cpp  check-frame_response_introw.cpp  check-frame_response_nbcrow.cpp
